# chesshole

./: .clang-format  CMakeLists.txt  README.md
.cache/clangd/index/: chess.cpp.B8DC2774AE3DE55C.idx  chess.hpp.41673833AB8F00DA.idx  common.hpp.9571ED0AA1519C7F.idx  lexer.cpp.B7767D0586DFE3C9.idx  lexer.hpp.E7FC34F8E9A0C165.idx  main.cpp.F88AFE609F294205.idx  render.cpp.2311DE55EADA23AB.idx  render.hpp.820CE59A4CA8933C.idx
img/: piece.paint
inc/: chess.hpp  common.hpp  lexer.hpp  render.hpp
src/: chess.cpp  common.cpp  lexer.cpp  main.cpp  render.cpp
